# xv-macos

./: CMakeLists.txt  LICENSE  README.md  build_macos.sh  macos-compile.patch  xv-3.10a-patched.tgz  xv_origin.txt
xv-3.10a/: bggen.c  vdcomp.c  xcmap.c  xv.h  xvalg.c  xvjp2k.c  xvpng.c
